메인브런치에서수정함

--- a/main.html
+++ b/main.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h2>여기는 메인브런치입니다.</h2>
-    <button>more+++</button>
+    <button>메인브런치에서 수정함.more+++</button>
   </body>
 </html>
